src/app/main/abt/abt.scss
 .pagination {
      ul {
        margin: auto;
        padding-top: 5px;
        padding-left: 0px;
        list-style: none;
        float: left;

        .active {
            a,
            span,
            a:hover,
            span:hover,
            a:focus,
            span:focus {
                z-index: 3;
                color: #fff;
                cursor: default;
                background-color: rgba(0,0,0,0.54);
                border-color: rgba(0,0,0,0.54);
            }
        }

        .disabled {
            a,
            span,
            a:hover,
            span:hover,
            a:focus,
            span:focus {
                color: #777;
                cursor: not-allowed;
                background-color: #fff;
                border-color: #ddd;
            }
        }

        li {
            display: inline-block;

            a, span {
                position: relative;
                float: left;
                padding: 3px 6px;
                margin-left: -1px;
                color: rgba(0,0,0,0.87);
                text-decoration: none;
                background-color: #fff;
                border: 1px solid #ddd;
            }

            &:first-child > a,
            &:first-child > span {
                margin-left: 0;
                border-top-left-radius: 4px;
                border-bottom-left-radius: 4px;
            }

            &:last-child > a,
            &:last-child > span {
                border-top-right-radius: 4px;
                border-bottom-right-radius: 4px;
            }

            a:hover,
            span:hover,
            a:focus,
            span:focus {
                z-index: 2;
                color: #23527c;
                background-color: #eee;
                border-color: #ddd;
            }
        }
    }
}

.dashed { stroke-dasharray: 5,5; }

